<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/greeting"
            android:textAlignment="center"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_name_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/hello2"

            />


        <Button
            android:id="@+id/btn_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_hello"/>

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnHello"
            android:text="@string/cb_1"/>

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cb_2"/>

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cb_3"/>

        <Button
            android:id="@+id/btnCheckFruit"
            android:text="@string/btn_check_fruit"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/Widget.AppCompat.Button.Borderless"/>

        <RadioButton
            android:id="@+id/radioBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/rb_male"/>

        <RadioButton
            android:id="@+id/radioBtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/rb_female"/>

        <ToggleButton
            android:id="@+id/tb_guest_room_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:checked="true"
            android:textOff="@string/text_off"
            android:textOn="@string/text_on"/>

        <Switch
            android:id="@+id/swtDoorLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"

            android:checked="true"
            android:switchMinWidth="56dp"
            android:text="@string/swt_door_lock"
            tools:ignore="TouchTargetSizeCheck" />

        <SeekBar
            android:id="@+id/sbBrightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_large"
            android:indeterminate="false"
            android:max="500"
            android:progress="50"/>

        <RatingBar
            android:id="@+id/rbStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_medium_2"
            android:numStars="5"
            android:rating="3.5"
            />

        <TextView
            android:id="@+id/tvLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/text_show_loading"/>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLargeInverse"

            android:indeterminate="true"
            android:max="100"
            android:progress="25" />

        <Spinner
            android:id="@+id/spinnerLunchSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:entries="@array/lunch_selection"/>

        <AutoCompleteTextView
            android:id="@+id/actvDrinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            />
        <DatePicker
            android:id="@+id/do_date_to_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginRight="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:datePickerMode="spinner"/>

        <Button
            android:id="@+id/btn_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_select_date"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium" />

        <TextView
            android:id="@+id/tv_selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium"/>

        <TimePicker
            android:id="@+id/tp_check_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginRight="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:timePickerMode="clock"
            />

        <Button
            android:id="@+id/btn_select_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/tx_time"/>

        <TextView
            android:id="@+id/tv_selected_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_select_time"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium_2"/>






    </LinearLayout>





</ScrollView>